--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-REACT_APP_BACKEND_SERVER_URL=<REPLACE_ME_WITH_YOUR_BACKEND_SERVER_URL>:<PORT>
+# Make sure to uncomment line below to set the backend server URL
+#REACT_APP_BACKEND_SERVER_URL=<REPLACE_ME_WITH_YOUR_BACKEND_SERVER_URL>:<PORT>
 PORT=8080
