--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 # Make sure to uncomment line below to set the backend server URL
 #REACT_APP_BACKEND_SERVER_URL=<REPLACE_ME_WITH_YOUR_BACKEND_SERVER_URL>:<PORT>
+#Example:
+REACT_APP_BACKEND_SERVER_URL=http://blogapp-env.eba-6zbiztix.us-east-2.elasticbeanstalk.com
 PORT=8080
