--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,4 @@
-# Make sure to uncomment line below to set the backend server URL
-#REACT_APP_BACKEND_SERVER_URL=<REPLACE_ME_WITH_YOUR_BACKEND_SERVER_URL>:<PORT>
-#Example:
-REACT_APP_BACKEND_SERVER_URL=https://postko.com
+# Update your backend server URL
+REACT_APP_BACKEND_SERVER_URL=https://<hostname>:<port>
+# Frontend port
 PORT=8080
