--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # Update your backend server URL
-REACT_APP_BACKEND_SERVER_URL=https://postku.com
+REACT_APP_BACKEND_SERVER_URL=https://postko.com
 # Frontend port
 PORT=8080
